--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 	<head>
 	</head>
 	<body>
-		Did we do it?
-		<message-banner></message-banner>
+		<reduxtris></reduxtris>
 		<script src="./dist/bundle.js"></script>
 	</body>
 </html>
